# cf-ddns

./: Cargo.toml  Dockerfile  README.md  config.example.toml
src/: client.rs  config.rs  main.rs  util.rs
