[package]
name = "cf-ddns"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Dynamic DNS"
repository = "https://github.com/thomasqueirozb/cf-ddns"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["ddns", "dns", "cloudflare"]
license = "AGPL-3.0"

[dependencies]
clap = { version = "4.4.14", features = ["derive", "env"] }
cloudflare = "0.11.0"
color-eyre = "0.6.2"
env_logger = "0.10.1"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"

[features]
default = ["default-tls"]

default-tls = ["cloudflare/default-tls", "reqwest/default-tls"]
# native-tls = ["cloudflare/native-tls", "reqwest/native-tls"]
rustls-tls = ["cloudflare/rustls-tls", "reqwest/rustls-tls"]

[profile.release]
strip = true
lto = true

[profile.release-tiny]
inherits = "release"
opt-level = "z"

[lints.clippy]
cargo = "deny"
